--- a/style.css
+++ b/style.css
@@ -1,3 +1,25 @@
 *{
     box-sizing: border-box;
 }
+
+:root {
+    --primary: #ffffff;
+    --secondary: #cf0505;
+    --tertiary: rgb(160, 5, 5);
+    font-size: 60%;
+  }
+
+  body {
+    background: #000000;
+    color: var(--secondary);
+    margin: 0;
+    padding: 0;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+  }
+  
+  header {
+      display: flex;
+      justify-content: space-between;
+      margin: auto;
+      width: 85%;
+  }
