--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
     color: var(--secondary);
     margin: 0;
     padding: 0;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 header {
